--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,5 +16,6 @@ jobs:
       - uses: matt-ball/newman-action@master
         with:
           collection: demoblaze.postman_collection.json
-          iterationData: data.csv        
+          iterationData: data.csv 
+          folder: Filter_category_data
           reporters: '["cli", "html"]'
